# Bid_Optimization_Agentic_AI

./: README.md  main copy.py  main.py
bid_aurigo/: cost_estimation_report.md
config/: agents.yaml
db/: chroma.sqlite3
src/bid_aurigo/: crew.py  dashboard_report.md  pyproject.toml
src/bid_aurigo/config/: tasks.yaml  template.html
src/bid_aurigo/gui/: app.py
tools/: custom_tool.py
