[project]
name = "bid_aurigo"
version = "0.1.0"
description = "bid-aurigo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
    "mysql-connector-python",
    "panel",
    "asyncio",
    "langchain-tools>=0.1.34",
    "crewai-tools>=0.12.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.145.0",
    "streamlit",
    "langchain-google-genai",
    "langchain-groq",
    "pypdf",
    "composio_crewai"
]
[project.scripts]
bid_aurigo = "bid_aurigo.main:run"
run_crew = "bid_aurigo.main:run"
train = "bid_aurigo.main:train"
replay = "bid_aurigo.main:replay"
test = "bid_aurigo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
